Changed file paths

--- a/about.html
+++ b/about.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/normalize.css">
-    <link rel="stylesheet" href="../resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/normalize.css">
+    <link rel="stylesheet" href="resources/css/style.css">
     <link href="https://aa-line-icons.gitlab.io/i/icons.css" rel="stylesheet" crossorigin>
     <title>about me</title>
 </head>
 <body>
     <header>
         <div class="button" id="home-button">
-            <img src="../resources/img/bunnyhome.gif" alt="">
+            <img src="resources/img/bunnyhome.gif" alt="">
 			<a href="./home.html">Home</a>
 		</div>
         <div class="music-player" onclick="playMusic()">
