--- a/dreams.html
+++ b/dreams.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dream.css">
+    <link rel="stylesheet" href="resources/css/dream.css">
     <title>Dreams</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <img src="https://file.garden/aL2Xk6tqfwJhLlie/IMG_3987.png" alt="Face of a man">
         <div id="typewriter">We also live in our dreams, we do not live only by day. Sometimes we accomplish our greatest deeds in dreams.</div>
     </div>
-    <script src="../typewrite.js"></script>
+    <script src="typewrite.js"></script>
     <script>
         function goToNextPage() {
             window.location.href = "./marrow.html";
