--- a/escape.html
+++ b/escape.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dream.css">
+    <link rel="stylesheet" href="resources/css/dream.css">
     <title>Escape</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             Finally the fear of the inescapable seizes you, for it comes after you slowly and invincibly.
             There is no escape.</div>
     </div>
-    <script src="../typewrite.js"></script>
+    <script src="typewrite.js"></script>
     <script>
         function goToNextPage() {
             window.location.href = "./birth.html";
