--- a/god.html
+++ b/god.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dream.css">
+    <link rel="stylesheet" href="resources/css/dream.css">
     <title>Who are you?</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div id="typewriter">A God who is no stronger than man—what is he? You still should taste holy dread.
             How would you be worthy of enjoying the wine and the bread if you have not touched the black bottom of human nature?</div>
     </div>
-    <script src="../typewrite.js"></script>
+    <script src="typewrite.js"></script>
     <script>
         function goToNextPage() {
             window.location.href = "./way.html";
