--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 	<link href="https://aa-line-icons.gitlab.io/i/icons.css" rel="stylesheet" crossorigin>
     <title>nicalico's world</title>
 </head>
 <body>
 	<header>
 		<div class="button" id="home-button">
-			<img src="../resources/img/bunnyhome.gif" alt="">
+			<img src="resources/img/bunnyhome.gif" alt="">
 			<a href="./home.html">Home</a>
 		</div>
 		<div class="music-player" onclick="playMusic()">
@@ -24,25 +24,25 @@
 	</header>
 	<div class="img-container" id="about">
 		<a href="./about.html">
-			<img src="../resources/img/Sticker52.png" alt="">
+			<img src="resources/img/Sticker52.png" alt="">
 			<h2>About Me</h2>
 		</a>
 	</div>
 	<div class="img-container" id="musicals">
 		<a href="./musicals.html">
-			<img src="../resources/img/Sticker48.png" alt="">
+			<img src="resources/img/Sticker48.png" alt="">
 			<h2>Musicals</h2>
 		</a>
 	</div>
 	<div class="img-container" id="travels">
 		<a href="./travels.html">
-			<img src="../resources/img/Sticker49.png" alt="">
+			<img src="resources/img/Sticker49.png" alt="">
 			<h2>Travels</h2>
 		</a>
 	</div>
 	<div class="img-container" id="dreams">
 		<a href="./dreams.html">
-		<img src="../resources/img/Sticker51.png" alt="">
+		<img src="resources/img/Sticker51.png" alt="">
 		<h2>Dream Novel</h2>
 		</a>
 	</div>
