--- a/manandserpent.html
+++ b/manandserpent.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dream.css">
+    <link rel="stylesheet" href="resources/css/dream.css">
     <title>Man and Serpent</title>
 </head>
 <body>
     <div class="container">
         <img src="https://file.garden/aL2Xk6tqfwJhLlie/IMG_3984.png" alt="Man and Serpent">
     </div>
-    <script src="../typewrite.js"></script>
+    <script src="typewrite.js"></script>
     <script>
         function goToNextPage() {
             window.location.href = "./escape.html";
