--- a/way.html
+++ b/way.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dream.css">
+    <link rel="stylesheet" href="resources/css/dream.css">
     <title>Way</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
             Hence look into yourself. Do not compare, do not measure. No other way is like yours. All other ways deceive and tempt you.
             You must fulfill the way that is in you.</div>
     </div>
-    <script src="../typewrite.js"></script>
+    <script src="typewrite.js"></script>
     <script>
         function goToNextPage() {
             window.location.href = "./home.html";
