--- a/birth.html
+++ b/birth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dream.css">
+    <link rel="stylesheet" href="resources/css/dream.css">
     <title>Birth</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <img src="https://file.garden/aL2Xk6tqfwJhLlie/romanwoman.png" alt="Statue of a Roman Woman">
         <div id="typewriter">For I still did not know what it means to give birth to a God.</div>
     </div>
-    <script src="../typewrite.js"></script>
+    <script src="typewrite.js"></script>
     <script>
         function goToNextPage() {
             window.location.href = "./god.html";
