--- a/marrow.html
+++ b/marrow.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dream.css">
+    <link rel="stylesheet" href="resources/css/dream.css">
     <title>Dreams</title>
 </head>
 <body>
     <div class="container">
         <div id="typewriter">I cut down to the marrow, until everything meaningful falls from me, until I am no longer as I might seem to myself, until I know only that I am without knowing what I am.</div>
     </div>
-    <script src="../typewrite.js"></script>
+    <script src="typewrite.js"></script>
     <script>
         function goToNextPage() {
             window.location.href = "./serpent.html";
