--- a/soul.html
+++ b/soul.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/dream.css">
+    <link rel="stylesheet" href="resources/css/dream.css">
     <title>Soul</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
             I: "How strangely familiar you are! Who are you?"
             S: "I am your soul."</div>
     </div>
-    <script src="../typewrite.js"></script>
+    <script src="typewrite.js"></script>
     <script>
         function goToNextPage() {
             window.location.href = "./manandserpent.html";
